# twitter_x_fusion_scrapper

./: .env.example  .gitignore  LICENSE  Makefile  README.md  cli.py  pyproject.toml  requirements.txt  usage_guide.md
.claude/: settings.local.json
config/: queries.json  settings.py  targets.json
core/: __init__.py  account_manager.py  error_handler.py  rate_limiter.py  smart_router.py
engines/: __init__.py  base.py  guest_engine.py  twikit_engine.py  twscrape_engine.py
models/: __init__.py  trend.py  tweet.py  user.py
old/: debug_trends2.py  main.py  setup_accounts.py
old/scrapers/: __init__.py  base.py  search_scraper.py  trend_scraper.py  tweet_scraper.py  user_scraper.py
output/: pipeline.py
